# YotsubaCore

./: AGENTS.md  README.md  index.html  package.json  vite.config.ts
.github/workflows/: release-portable.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  windows-app-manifest.xml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: README.txt
src-tauri/src/: lib.rs  main.rs
src/assets/: main.css
src/components/layout/: AppNotice.vue  AppShell.vue  AppTabs.vue  AppTopbar.vue
src/components/layout/apps/: AppsHeader.vue  AppsProxyList.vue  AppsRunningList.vue
src/components/layout/dashboard/: DashboardStatusCard.vue
src/components/layout/logs/: LogsViewer.vue
src/components/layout/profiles/: ProfilesAlerts.vue  ProfilesImportJson.vue  ProfilesImportShare.vue  ProfilesList.vue
src/components/ui/badge/: Badge.vue  index.ts
src/components/ui/button/: Button.vue  index.ts
src/components/ui/card/: Card.vue  CardContent.vue  CardDescription.vue  CardFooter.vue  CardHeader.vue  CardTitle.vue
src/components/ui/input/: Input.vue  index.ts
src/components/ui/primitive/: Primitive.vue  index.ts
src/components/ui/separator/: Separator.vue  index.ts
src/components/ui/switch/: Switch.vue
src/components/ui/textarea/: Textarea.vue  index.ts
src/lib/: theme.ts  utils.ts
src/router/: index.ts
src/stores/: proxy.ts
src/view/: AppsView.vue  DashboardView.vue  LogsView.vue  ProfilesView.vue
